# calculator-python-homework

./: README.md  calculator.py  main.py  pyproject.toml  ui.py
tests/: __init__.py  test_calculator.py
